tests/neg/i7529.scala
extension fooOps of [A](a: A) with

  @nonsense    // error: not found: nonsense
  def foo = ???